--- a/scss/layout/_paginaPresentacion.scss
+++ b/scss/layout/_paginaPresentacion.scss
@@ -1,31 +1,32 @@
-.presentación{
+.presentacionBorbolet{
     .frase{
         width: 100%;
     }
-    .presentacionBorbolet{
-        background-color: map-get($color, terciario);
-        font-family: "Poppins", sans-serif;
-        .articlePresentacion{
-            @include flex(row, center, center, 80px);
-            padding: 0px 20px 0px 20px;
-            .imgCreadora{
-                width: 260px;
-                border-radius: 50px;
-            }
-            .txtCreadora{
-                font-size: map-get($medidas, subtitulo);
-                color: map-get($color, primario);
-                margin-bottom: 50px;
-            }
-            .divCreadora{        
-                .flechas{
-                    text-align: right;
-                    margin-right: 50px;
-                }
+    background-color: map-get($color, terciario);
+    font-family: "Poppins", sans-serif;
+    .articlePresentacion{
+        @include flex(row, center, center, 80px);
+        flex-wrap: wrap;
+        padding: 0px 20px 0px 20px;
+        .imgCreadora{
+            width: 260px;
+            border-radius: 50px;
+        }
+        .txtCreadora{
+            font-size: map-get($medidas, subtitulo);
+            color: map-get($color, primario);
+            margin-bottom: 50px;
+        }
+        .divCreadora{        
+            .flechas{
+                text-align: right;
+                margin-right: 50px;
             }
         }
+    }
         .articleHistoria{
             @include flex(row, center, center, 80px);
+            flex-wrap: wrap;
             padding: 20px;
             padding-top: 80px;
             .imgIndigenas{
@@ -47,6 +48,7 @@
         }
         .articleResultado{
             @include flex(row, center, center, 80px);
+            flex-wrap: wrap;
             padding: 0px 80px 0px 80px;
             .imgModelos{
                 width: 260px;
@@ -101,4 +103,3 @@
             }
         }
     }
-}
