--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
     font-family: "Poppins", sans-serif;
 
     .articleFooter{
-        @include flex(row, space-around, baseline, 30px);
+        @include flex(row, space-around, baseline, 10px);
         flex-wrap: wrap;
         .divcontactoFooter{
             padding: 5px;
@@ -18,6 +18,9 @@
         .menuFooter{
             .link-list{
                 list-style-type: none;
+                .list{
+                    display: block;
+                }
                 .link{
                     text-decoration: none;
                     color:#212529;
