--- a/scss/layout/_paginaAretes.scss
+++ b/scss/layout/_paginaAretes.scss
@@ -58,9 +58,10 @@ nav ul div button.dropdown-toggle {
     justify-content: center;
     background-color: map-get($color, terciario);
     .sectionColeccion{
-        @include grid(repeat(1,1fr), repeat(1,1fr));
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
         width: 100%;
-        height: 100%;
         padding-block: 3%;
         .tituloAretes h2{
             font-weight: 500;
@@ -88,8 +89,14 @@ nav ul div button.dropdown-toggle {
         .products-section {
             display: flex;
             flex-direction: column;
+            flex-wrap: wrap;
             padding-block: 3%;
             gap: 4rem;
+            margin-top: 30px;
+            .productos{
+                @include flex(center, center, center, 30px);
+                flex-wrap: wrap;
+            }
         }
     }
 }
