--- a/scss/layout/media/_mediamovil.scss
+++ b/scss/layout/media/_mediamovil.scss
@@ -134,6 +134,7 @@
                 height: 100px;
                 border-radius: 15px;
                 gap: 20px;
+                flex-direction: center;
                 .compra1{
                     display: none;
                 }
@@ -183,7 +184,7 @@
     }
     .presentacionBorbolet{
         .articlePresentacion{
-            padding: 20px;
+            padding: 2gi0px;
             .imgCreadora{
                 margin-bottom: 15px;
             }
@@ -256,6 +257,17 @@
     .sectionTestimonios{
         .antepenultima{
             display:none;
+        }
+    }
+    .sectionFooter{
+        .articleFooter{
+            flex-direction: column;
+            margin-left: 50px;
+            .menuFooter{
+                .link-list{
+                    padding-left: 0px;
+                }
+            }
         }
     }
 }
