--- a/scss/layout/_paginaAretes.scss
+++ b/scss/layout/_paginaAretes.scss
@@ -20,6 +20,14 @@
     }
 }
 
+.dropdown{
+    .btn{
+        border-color: #470063;
+        border: none;
+        box-shadow: 0 0 0 0;
+    }
+}
+
 .dropdown-menu {
     width: 200%;
     border-radius: 0.625rem;
