--- a/scss/layout/media/_media1180.scss
+++ b/scss/layout/media/_media1180.scss
@@ -32,16 +32,24 @@
     .desktop-navbar {
         display: none;
     }
+
+    *{
+        transition: none !important;
+     }
+      
     .mobile-navbar {
         @include flex(row, space-between, start, 1.5625rem);
         background-color: #ffffff;
         border-bottom: .1875rem solid #470063;
+
+        .navbar-toggler-icon{
+            background-image: url(../assets/img/Hamburguesa.svg);
+        }
         .navbar-toggler{
             padding: 0;
             border-color: #470063;
             border: none;
             box-shadow: 0 0 0 0;
-            position: absolute;
         }
         .container-fluid{
             width: 30%;
@@ -49,12 +57,23 @@
             padding: 0;
             margin-left: 40px;
             .collapse{
+                z-index: 1050;
+
                 .navbar-nav{
+                    background-color: #ffffff;
                     height: 100%;
                     padding-left: 15px;
-                    background-color: #ffffff;
+                    padding-right: 15px;
                     width: 100%;
                     border-radius: 10%;
+                    .dropdown-menu{
+                        width: 100%;
+                        box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.15),  
+                        inset 0px -1px 2px rgba(255, 255, 255, 0.6); 
+                    }
+                    .coleccion-link{
+                        color:#470063;
+                    }
                 }
             }
             .nav-item{
@@ -64,7 +83,11 @@
             .coleccion-link{
                 color: map-get($color, primario);
                 font-size: 1.125rem;
+                padding-bottom: 0;
             }
+        }
+        .navbar-collapse.show {
+            display: block;
         }
         .logo-mobile{
             padding-right: 40px;
