Se crea la página de producto individual y se pulen detalles de todo el stio web en general

--- a/scss/layout/_seccionFotografia.scss
+++ b/scss/layout/_seccionFotografia.scss
@@ -14,6 +14,7 @@
         flex-wrap: wrap;
         justify-content: space-evenly;
         padding:1.875rem;
+        gap: 5px;
         .fotografia{
             width: 29.5rem;
             height: 27.5rem;
