--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@
 @import "./layout/paginaContacto";
 @import "./layout/paginaPresentacion";
 @import "./layout/paginaProcesos";
+@import "./layout/paginaProducto";
 
 /*Carpeta components
 @import "./components/bootstrap";*/
