--- a/css/stle.css
+++ b/css/stle.css
@@ -340,7 +340,6 @@ nav ul div button.dropdown-toggle {
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 1.875rem;
-  gap: 5px;
 }
 .sectionFotografia .fotografias .fotografia {
   width: 29.5rem;
@@ -777,43 +776,6 @@ nav ul div button.dropdown-toggle {
   box-shadow: 1px 1px 1px #555555;
 }
 
-.paginaProducto {
-  padding: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 30px;
-  font-family: "Poppins", sans-serif;
-}
-.paginaProducto .bottomsProducto {
-  margin: 20px 0px 20px 0px;
-}
-.paginaProducto .bottomsProducto .btnCantidad {
-  width: 60px;
-  height: 40px;
-  color: #470063;
-  border: 0.125rem solid #470063;
-  border-radius: 1.25rem;
-  box-shadow: 2px 2px 2px #555555;
-  background-color: rgba(15, 10, 10, 0);
-  cursor: pointer;
-  margin-right: 30px;
-}
-.paginaProducto .bottomsProducto .btnCarrito {
-  width: 200px;
-  height: 40px;
-  background-color: #FF1D79;
-  color: white;
-  border-radius: 1.25rem;
-  box-shadow: 2px 2px 2px #555555;
-  border: 0.125rem solid #FF1D79;
-  cursor: pointer;
-}
-.paginaProducto .precioProducto {
-  font-size: 1.125rem;
-}
-
 /*Carpeta components
 @import "./components/bootstrap";*/
 .card {
@@ -1056,7 +1018,7 @@ nav ul div button.dropdown-toggle {
   }
   .sectionTestimonios .divTestimonios .textoCardTestimonios {
     font-size: 16px;
-    margin-bottom: 28px;
+    margin-bottom: 3px;
   }
   .sectionTestimonios .divTestimonios .nombre {
     font-size: 16px;
@@ -1286,7 +1248,7 @@ nav ul div button.dropdown-toggle {
     height: 100%;
     padding-left: 15px;
     padding-right: 15px;
-    width: 200px;
+    width: 100%;
     border-radius: 10%;
   }
   .mobile-navbar .container-fluid .collapse .navbar-nav .dropdown-menu {
@@ -1435,9 +1397,6 @@ nav ul div button.dropdown-toggle {
   .sectionCompra .tituloCompra {
     font-size: 24px;
   }
-  .sectionCompra .contenedorCompra {
-    align-self: center;
-  }
   .sectionCompra .contenedorCompra .cardCompra {
     width: 290px;
     height: 100px;
@@ -1537,17 +1496,14 @@ nav ul div button.dropdown-toggle {
   .sectionFotografia {
     margin: 0;
     padding: 0;
-    padding-bottom: 20px;
-  }
-  .sectionFotografia .tituloFotografia {
-    margin-top: 25px;
+    padding-bottom: 150px;
   }
   .sectionFotografia .fotografias {
     padding: 1px;
   }
   .sectionFotografia .fotografias .fotografia {
     width: 302px;
-    height: 280px;
+    height: 302px;
   }
   .sectionTestimonios .antepenultima {
     display: none;
@@ -1556,12 +1512,9 @@ nav ul div button.dropdown-toggle {
     flex-direction: column;
     margin-left: 50px;
   }
-  .sectionFooter .articleFooter .imgLogoFooter {
-    width: 70%;
-  }
   .sectionFooter .articleFooter .menuFooter .link-list {
     padding-left: 0px;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=stle.css.map */
