--- a/scss/layout/media/_media1180.scss
+++ b/scss/layout/media/_media1180.scss
@@ -37,9 +37,10 @@
         transition: none !important;
      }
     .mobile-navbar {
-        @include flex(row, space-between, start, 1.5625rem);
+        @include flex(row, space-between , center, 20px);
         background-color: #ffffff;
         border-bottom: .1875rem solid #470063;
+        padding: 0px 20px 0px 20px;
 
         .navbar-toggler-icon{
             background-image: url(../assets/img/Hamburguesa.svg);
@@ -51,11 +52,13 @@
             box-shadow: 0 0 0 0;
         }
         .container-fluid{
-            width: 30%;
+            flex: 0;
+            width: 100%;
             height: 50px;
             padding: 0;
-            margin-left: 40px;
             .collapse{
+                position: absolute;
+                top: 100%;
                 z-index: 1050;
                 .navbar-nav{
                     background-color: #ffffff;
@@ -89,15 +92,28 @@
             }        
               
         }
-        .aBrand{
-            height: 10px;
-            position:relative;
-            top: 43px;
+        .logo-mobile{
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            position: relative;
+            top: 22px;
+            width: auto;
+            .navbar-brand{
+                padding: 0;
+            }
+            .a{
+                margin: 0;
+                padding:0;
+            }
         }
-        .navbar-brand{
-            margin-right: 30px;
-            position:relative;
-            top: -34px;
+
+        .divCesta{
+            display: flex;
+            align-items: center;
+            height: 69px;
+            text-align: right;
         }
     }
         
