se arreglan estilos de navbar

--- a/scss/layout/_seccionPrincipal.scss
+++ b/scss/layout/_seccionPrincipal.scss
@@ -1,6 +1,6 @@
 @import url(../utilities/_mixins.scss);
 .sectionPrincipal{
-    background-image: url("../assets/img/fotoPrincipal.png");
+    background-image: url("../assets/img/fotoPrincipal.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
