--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header .imgproducto {
 }
 
 .sectionPrincipal {
-  background-image: url("../assets/img/fotoPrincipal.png");
+  background-image: url("../assets/img/fotoPrincipal.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -900,7 +900,7 @@ nav ul div button.dropdown-toggle {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    gap: 0;
     background-color: #ffffff;
     border-bottom: 0.1875rem solid #470063;
     padding: 0px 20px 0px 20px;
@@ -915,10 +915,9 @@ nav ul div button.dropdown-toggle {
     box-shadow: 0 0 0 0;
   }
   .mobile-navbar .container-fluid {
-    flex: 0;
-    width: 100%;
-    height: 50px;
-    padding: 0;
+    width: 33%;
+    margin-right: 0;
+    padding-right: 0;
   }
   .mobile-navbar .container-fluid .collapse {
     position: absolute;
@@ -954,26 +953,20 @@ nav ul div button.dropdown-toggle {
     color: #470063;
   }
   .mobile-navbar .logo-mobile {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+    width: 33%;
+  }
+  .mobile-navbar .logo-mobile a .navbar-brand {
     position: relative;
-    top: 22px;
-    width: auto;
-  }
-  .mobile-navbar .logo-mobile .navbar-brand {
-    padding: 0;
-  }
-  .mobile-navbar .logo-mobile .a {
-    margin: 0;
-    padding: 0;
+    top: 20px;
+    height: 100%;
   }
   .mobile-navbar .divCesta {
+    width: 33%;
     display: flex;
     align-items: center;
     height: 69px;
     text-align: right;
+    justify-content: end;
   }
   .sectionPrincipal h1 {
     grid-row: 1/2;
@@ -1280,22 +1273,19 @@ nav ul div button.dropdown-toggle {
     width: 190px;
   }
 }
-@media (max-width: 500px) and (max-width: 980px) {
+@media (max-width: 500px) {
   .mobile-navbar {
     padding: 0px 10px 0px 10px;
   }
   .mobile-navbar .logo-mobile {
-    width: 10px;
-    height: 10px;
+    margin-right: 0;
+    padding-right: 0;
   }
-  .mobile-navbar .navbar-brand {
-    width: 80%;
-    position: relative;
-    top: -18px;
-    margin: 0px;
+  .mobile-navbar .container-fluid {
+    width: 10%;
+    margin-left: 0;
+    padding-left: 0;
   }
-}
-@media (max-width: 500px) {
   .divNav {
     width: 100%;
   }
