--- a/scss/layout/media/_mediamovil.scss
+++ b/scss/layout/media/_mediamovil.scss
@@ -1,21 +1,16 @@
 @media (max-width:500px){
-    @media (max-width: 980px){
-        .mobile-navbar {
-            padding: 0px 10px 0px 10px;
-    
-            .logo-mobile{
-                width: 10px;
-                height: 10px;
-            }
-            .navbar-brand{
-                width: 80%;
-                position:relative;
-                top: -18px;
-                margin: 0px;
-            }
+    .mobile-navbar {
+        padding: 0px 10px 0px 10px;
+        .logo-mobile {
+            margin-right: 0;
+            padding-right: 0;
+        }
+        .container-fluid {
+            width: 10%;
+            margin-left: 0;
+            padding-left: 0;
         }
     }
-    //
     .divNav{
         width: 100%;
     }
